gcc/testsuite/g++.old-deja/g++.mike/err2.C
// { dg-do assemble  }
class foo {
public:
  void apply(foo *(foo::*memptr)()) {
    this->*memptr();		// { dg-error "" } wrong
  }
};
